# beagle-rover

./: .gitignore  CMakeLists.txt  README.md  battery.cpp  battery.h  component.cpp  component.h  config.h.in  create-env.sh  errors.h  fbus.cpp  fbus.h  generateModel.sh  install.sh  main.cpp  motor.cpp  motor.h  motorcontrol.cpp  motorcontrol.h  prudebug.cpp  prudebug.h  requirements.txt  robot.cpp  robot.h  setup.py  test.ipynb  test.py  test_kinematic.py  test_leds.py  test_repr.py  test_servo.py
.devcontainer/: Dockerfile  am33xx-toolchain.cmake  cmake-tools-kits.json  devcontainer.json
client/: .env  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.tsx  Router.tsx  index.tsx  store.ts
client/src/components/: BatteryStatus.tsx  Logo.tsx  Page.tsx  ScrollingView.tsx
client/src/pages/: Controls.tsx  Home.tsx  LEDS.tsx  Motors.tsx  Receiver.tsx  RestAPI.tsx  Telemetry.tsx  Test.tsx
client/src/services/: input.ts  kinematic.ts  model.ts  motors.ts  rcreceiver.ts  robot.ts  system.ts  telemetry.ts  util.ts
client/src/theme/: globalStyles.tsx  index.tsx
docs/: beaglerover_taranis.otx
examples/: example_robot.cpp  example_robot.py  test.py  test_kinematic.py  test_kinematic2.py  test_kinematic_front.py  test_leds.py  test_leds2.py  test_leds3.py  test_motors.py  test_motors2.py  test_network.py  test_pid.py  test_rc.py  test_repr.py  test_subscription_asyncio.py  test_system.py  test_telemetry.py
firmware/beaglebone/pru0-firmware/: .gitignore  Makefile  debug.c  debug.h  encoder.c  encoder.h  fbus.c  fbus.h  fbus_types.h  main.c  message.h  neopixel.c  neopixel.h  printf.c  resource_table_0.h  servo.c  servo.h  sharedmem.h
led/: ledanimation.cpp  ledanimation.h  ledcontrol.cpp  ledcontrol.h
lib/pid/: CMakeLists.txt  PID.cpp  PID.h
lib/robotcontrol-ext/: CMakeLists.txt  rc_ext_debug.c  rc_ext_debug.h  rc_ext_encoder.c  rc_ext_fbus.c  rc_ext_fbus.h  rc_ext_neopixel.c  rc_ext_pru.c
lib/robotcontrolext/: CMakeLists.txt  rc_ext_debug.c  rc_ext_debug.h  rc_ext_encoder.h  rc_ext_fbus.c  rc_ext_fbus.h  rc_ext_neopixel.c  rc_ext_neopixel.h  rc_ext_pru.c  rc_ext_pru.h
robotcontrol-ext/: CMakeLists.txt  rc_ext_debug.c  rc_ext_debug.h  rc_ext_encoder.c  rc_ext_fbus.c  rc_ext_fbus.h  rc_ext_neopixel.c  rc_ext_neopixel.h  rc_ext_pru.c  rc_ext_pru.h  robotcontrol-ext.h
server/: .gitignore  main.py  openapi.yaml
server/robot/: __init__.py  api.py  api_input.py  api_kinematic.py  api_leds.py  api_motors.py  api_rcreceiver.py  api_system.py  api_telemetry.py  error_handler.py  serializer.py  util.py  watches.py
src/: component.cpp  component.h  fbus.cpp  fbus.h  logging.cpp  logging.h  prudebug.cpp  prudebug.h  python.cpp  rcreceiver.cpp  robot.cpp  robot.h  robotconfig.h  robotcontext.cpp  robotcontext.h  robotdebug.cpp  robotdebug.h  robotlogging.cpp  robottypes.h
src/common/: asyncsignal.cpp  asyncsignal.h  notifysubscription.h  properties.h  value.h  withmutex.h  withnotify.h  withstrand.h
src/configs/: board-beaglebone-blue.h  board-beaglebone-pocket.h  board-pc.h  chassis-beaglerover.h
src/debug/: prudebug.cpp  prudebug.h
src/hardware/: abstractpower.cpp  abstractpower.h  nooppower.h  proxypower.h  types.h
src/input/: control.cpp  control.h  inputcontrol.cpp  inputcontrol.h  inputinterface.h  inputsource.h  inputtypes.h  inputvalue.h  softwareinterface.h  types.h  value.h
src/kinematic/: abstractcontrolscheme.cpp  abstractcontrolscheme.h  controlbalancing.cpp  controlbalancing.h  controlidle.cpp  controlidle.h  controlnormal.cpp  controlnormal.h  controlscheme.h  controlschemebalancing.cpp  controlschemebalancing.h  controlschemeidle.cpp  controlschemeidle.h  controlschemenormal.cpp  controlschemenormal.h  controlschemepassthrough.cpp  controlschemepassthrough.h  controlschemespinning.cpp  controlschemespinning.h  controlspinning.cpp  controlspinning.h  kinematic.cpp  kinematic.h  kinematictypes.h  types.h
src/led/: animation.h  color.cpp  color.h  colorarray.h  colorlayer.cpp  colorlayer.h  control.cpp  control.h  ledanimation.cpp  ledanimation.h  ledcolor.cpp  ledcolor.h  ledcolorlayer.cpp  ledcolorlayer.h  ledcontrol.cpp  ledcontrol.h  types.h
src/math/: pid.cpp  pid.h
src/motor/: control.cpp  control.h  motor.cpp  motor.h  motorcontrol.cpp  motorcontrol.h  motorgimbal.cpp  motorgimbal.h  motorservo.cpp  motorservo.h  motortypes.h  servo.cpp  servo.h  types.h
src/python/: errors.h  export_input.cpp  export_kinematic.cpp  export_led.cpp  export_misc.cpp  export_motor.cpp  export_rcreceiver.cpp  export_robot.cpp  export_std.cpp  export_system.cpp  export_telemetry.cpp  export_util.cpp  module.cpp  subscription.cpp  subscription.h  util.cpp  util.h
src/rc/: inputsource.cpp  inputsource.h  rcreceiver.cpp  rcreceiver.h  rctypes.h  receiver.cpp  receiver.h  types.h
src/rcreceiver/: rcreceiver.cpp  rcreceiver.h
src/robotweb/: __init__.py  api.py  api_input.py  api_kinematic.py  api_leds.py  api_motors.py  api_rcreceiver.py  api_system.py  api_telemetry.py  cors_handler.py  serializer.py
src/system/: network.cpp  network.h  power.cpp  power.h  prudebug.cpp  prudebug.h  wifi.cpp  wifi.h
src/telemetry/: abstracttelemetrysource.h  adcbattery.cpp  adcbattery.h  battery.cpp  battery.h  events.cpp  events.h  history.h  rcmpu.cpp  rcmpu.h  telemetry.cpp  telemetry.h  telemetrysource.h  telemetrytypes.h  types.h
telemetry/: battery.cpp  battery.h  telemetry.cpp  telemetry.h  telemetrytypes.h
test/: pidplot  test.py  test_asyncsignal.cpp  test_color.cpp  test_color.py  test_kinematic.py  test_kinematic2.py  test_kinematic_front.py  test_leds.cpp  test_leds.py  test_leds2.py  test_motors.py  test_motors2.py  test_network.cpp  test_pid.py  test_rc.py  test_repr.py  test_robot.cpp  test_subscription.cpp  test_subscription.py  test_telemetry.py  test_value.cpp
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: Router.tsx  index.tsx
web/: .gitignore  build-client.sh  requirements.txt  setup.py
web/client/: .gitignore  package-lock.json  package.json
web/src/: main.py
(+279 files in other folders)
